--- a/CSS_Grid_Layout.html
+++ b/CSS_Grid_Layout.html
@@ -39,7 +39,8 @@
     <body>
         <div class="wrapper">
             <div>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae earum, 
+				<h4>Changing text to Pizza</h4>
+			   Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae earum, 
                 tenetur temporibus maxime nostrum iusto sapiente saepe perspiciatis soluta eius? 
                 Id voluptate quaerat nam quos sit. Soluta nulla excepturi minus.
             </div>
